# bindist-api-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bindist/: __init__.py  admin.py  base.py  customer.py
